tdf#136868, tdf#136912, Styles Inspector: Translatable categories

...and "Direct Formatting" renamed to "Character Direct Formatting"

Change-Id: I9fe711bfebfaa90a9797b6e1a47e41a5f307170b